added glass repo; fixed paths

--- a/client/repositories.cfg
+++ b/client/repositories.cfg
@@ -1,6 +1,7 @@
 ### User Sources for Android SDK Manager
-#Tue Jan 27 19:44:26 CST 2015
-count=9
+#Thu Jan 29 04:36:05 CST 2015
+count=10
+src09=http\://studyjams.dushu.hu/glass/gdk/addon.xml
 src08=http\://studyjams.dushu.hu/android/repository/sys-img/x86/addon-x86.xml
 src07=http\://studyjams.dushu.hu/android/repository/sys-img/android-tv/sys-img.xml
 src06=http\://studyjams.dushu.hu/android/repository/addon.xml
