--- a/client/sites-settings.cfg
+++ b/client/sites-settings.cfg
@@ -1,5 +1,5 @@
 ### Sites Settings for Android SDK Manager
-#Tue Jan 27 19:30:42 CST 2015
+#Thu Jan 29 04:35:14 CST 2015
 @name@https\://dl-ssl.google.com/android/repository/addon-6.xml=Google Inc.
 @disabled@https\://dl-ssl.google.com/android/repository/sys-img/android-tv/sys-img.xml=disabled
 @name@https\://dl-ssl.google.com/android/repository/sys-img/android-wear/sys-img.xml=Android Wear System Images
@@ -16,6 +16,7 @@
 @name@https\://dl-ssl.google.com/android/repository/repository-10.xml=Android Repository
 @name@https\://dl-ssl.google.com/android/repository/addon.xml=Google Inc.
 @name@https\://dl-ssl.google.com/glass/gdk/addon.xml=Glass Development Kit, Google Inc.
+@disabled@https\://dl-ssl.google.com/glass/gdk/addon.xml=disabled
 @name@https\://dl-ssl.google.com/android/repository/sys-img/android-tv/sys-img.xml=Android TV System Images
 @disabled@https\://dl-ssl.google.com/android/repository/sys-img/google_apis/sys-img.xml=disabled
 @name@https\://dl-ssl.google.com/android/repository/sys-img/x86/addon-x86.xml=Google Inc. (x86 System Images)
