--- a/client/sites-settings.cfg
+++ b/client/sites-settings.cfg
@@ -1,40 +1,57 @@
 ### Sites Settings for Android SDK Manager
-#Tue Mar 10 01:36:51 CST 2015
-@disabled@http\://dl-ssl.google.com/android/repository//glass/gdk/addon.xml=disabled
-@disabled@http\://dl-ssl.google.com/android/repository/addon-6.xml=disabled
-@disabled@http\://dl-ssl.google.com/android/repository/addon.xml=disabled
-@disabled@http\://dl-ssl.google.com/android/repository/extras/intel/addon.xml=disabled
-@disabled@http\://dl-ssl.google.com/android/repository/sys-img/android-tv/sys-img.xml=disabled
-@disabled@http\://dl-ssl.google.com/android/repository/sys-img/android-wear/sys-img.xml=disabled
-@disabled@http\://dl-ssl.google.com/android/repository/sys-img/android/sys-img.xml=disabled
-@disabled@http\://dl-ssl.google.com/android/repository/sys-img/google_apis/sys-img.xml=disabled
-@disabled@http\://dl-ssl.google.com/android/repository/sys-img/x86/addon-x86.xml=disabled
-@disabled@https\://dl-ssl.google.com/android/repository/addon-6.xml=disabled
-@disabled@https\://dl-ssl.google.com/android/repository/addon.xml=disabled
-@disabled@https\://dl-ssl.google.com/android/repository/extras/intel/addon.xml=disabled
-@disabled@https\://dl-ssl.google.com/android/repository/sys-img/android-tv/sys-img.xml=disabled
-@disabled@https\://dl-ssl.google.com/android/repository/sys-img/android-wear/sys-img.xml=disabled
-@disabled@https\://dl-ssl.google.com/android/repository/sys-img/android/sys-img.xml=disabled
+#Tue Mar 10 03:06:55 CST 2015
 @disabled@https\://dl-ssl.google.com/android/repository/sys-img/google_apis/sys-img.xml=disabled
-@disabled@https\://dl-ssl.google.com/android/repository/sys-img/x86/addon-x86.xml=disabled
-@disabled@https\://dl-ssl.google.com/glass/gdk/addon.xml=disabled
-@name@http\://dl-ssl.google.com/android/repository//glass/gdk/addon.xml=Glass Development Kit, Google Inc.
-@name@http\://dl-ssl.google.com/android/repository/addon-6.xml=Google Inc.
-@name@http\://dl-ssl.google.com/android/repository/addon.xml=Google Inc.
-@name@http\://dl-ssl.google.com/android/repository/extras/intel/addon.xml=Intel HAXM
-@name@http\://dl-ssl.google.com/android/repository/sys-img/android-tv/sys-img.xml=Android TV System Images
 @name@http\://dl-ssl.google.com/android/repository/sys-img/android-wear/sys-img.xml=Android Wear System Images
-@name@http\://dl-ssl.google.com/android/repository/sys-img/android/sys-img.xml=Android System Images
-@name@http\://dl-ssl.google.com/android/repository/sys-img/google_apis/sys-img.xml=Google API add-on System Images
-@name@http\://dl-ssl.google.com/android/repository/sys-img/x86/addon-x86.xml=Google Inc. (x86 System Images)
-@name@https\://dl-ssl.google.com/android/repository/addon-6.xml=Google Inc.
-@name@https\://dl-ssl.google.com/android/repository/addon.xml=Google Inc.
-@name@https\://dl-ssl.google.com/android/repository/extras/intel/addon.xml=Intel HAXM
-@name@https\://dl-ssl.google.com/android/repository/sys-img/android-tv/sys-img.xml=Android TV System Images
+@name@http\://dl.google.com/android/repository/addon.xml=Google Inc.
 @name@https\://dl-ssl.google.com/android/repository/sys-img/android-wear/sys-img.xml=Android Wear System Images
 @name@https\://dl-ssl.google.com/android/repository/sys-img/android/sys-img.xml=Android System Images
-@name@https\://dl-ssl.google.com/android/repository/sys-img/google_apis/sys-img.xml=Google API add-on System Images
+@name@http\://dl-ssl.google.com/android/repository/addon-6.xml=Google Inc.
+@disabled@http\://dl.google.com/android/repository/sys-img/google_apis/sys-img.xml=disabled
+@disabled@http\://dl-ssl.google.com/android/repository/addon-6.xml=disabled
+@name@https\://dl-ssl.google.com/android/repository/extras/intel/addon.xml=Intel HAXM
+@disabled@https\://dl-ssl.google.com/android/repository/addon.xml=disabled
+@name@http\://dl.google.com/android/repository/sys-img/android-tv/sys-img.xml=Android TV System Images
+@name@https\://dl-ssl.google.com/android/repository/addon.xml=Google Inc.
+@name@http\://dl.google.com/android/repository/extras/intel/addon.xml=Intel HAXM
+@name@http\://dl-ssl.google.com/android/repository/sys-img/x86/addon-x86.xml=Google Inc. (x86 System Images)
+@name@http\://dl-ssl.google.com/android/repository/sys-img/google_apis/sys-img.xml=Google API add-on System Images
+@disabled@http\://dl-ssl.google.com/android/repository/sys-img/google_apis/sys-img.xml=disabled
+@disabled@https\://dl-ssl.google.com/android/repository/sys-img/android-wear/sys-img.xml=disabled
+@disabled@http\://dl-ssl.google.com/android/repository/sys-img/android-wear/sys-img.xml=disabled
+@disabled@http\://dl.google.com/android/repository/extras/intel/addon.xml=disabled
+@disabled@http\://dl-ssl.google.com/android/repository//glass/gdk/addon.xml=disabled
+@disabled@http\://dl-ssl.google.com/android/repository/extras/intel/addon.xml=disabled
+@name@https\://dl-ssl.google.com/android/repository/sys-img/android-tv/sys-img.xml=Android TV System Images
+@disabled@http\://dl.google.com/android/repository/sys-img/android-wear/sys-img.xml=disabled
+@name@https\://dl.google.com/android/repository/repository-10.xml=Android Repository
+@disabled@http\://dl-ssl.google.com/android/repository/sys-img/android/sys-img.xml=disabled
+@disabled@https\://dl-ssl.google.com/android/repository/sys-img/android-tv/sys-img.xml=disabled
+@disabled@http\://dl.google.com/android/repository/sys-img/x86/addon-x86.xml=disabled
 @name@https\://dl-ssl.google.com/android/repository/sys-img/x86/addon-x86.xml=Google Inc. (x86 System Images)
-@name@https\://dl-ssl.google.com/glass/gdk/addon.xml=Glass Development Kit, Google Inc.
-@version@=1
+@disabled@http\://dl-ssl.google.com/android/repository/sys-img/android-tv/sys-img.xml=disabled
+@name@http\://dl.google.com/android/repository/sys-img/android/sys-img.xml=Android System Images
 @name@https\://dl-ssl.google.com/android/repository/repository-10.xml=Android Repository
+@disabled@https\://dl-ssl.google.com/android/repository/extras/intel/addon.xml=disabled
+@disabled@http\://dl.google.com/android/repository/addon-6.xml=disabled
+@name@http\://dl.google.com/android/repository/sys-img/android-wear/sys-img.xml=Android Wear System Images
+@disabled@http\://dl-ssl.google.com/android/repository/addon.xml=disabled
+@name@http\://dl-ssl.google.com/android/repository/sys-img/android-tv/sys-img.xml=Android TV System Images
+@name@http\://dl.google.com/android/repository/addon-6.xml=Google Inc.
+@name@http\://dl.google.com/android/repository/sys-img/google_apis/sys-img.xml=Google API add-on System Images
+@disabled@http\://dl.google.com/android/repository/addon.xml=disabled
+@disabled@http\://dl.google.com/android/repository/sys-img/android-tv/sys-img.xml=disabled
+@name@http\://dl-ssl.google.com/android/repository/addon.xml=Google Inc.
+@disabled@https\://dl-ssl.google.com/android/repository/addon-6.xml=disabled
+@disabled@http\://dl-ssl.google.com/android/repository/sys-img/x86/addon-x86.xml=disabled
+@name@https\://dl-ssl.google.com/android/repository/sys-img/google_apis/sys-img.xml=Google API add-on System Images
+@name@http\://dl-ssl.google.com/android/repository//glass/gdk/addon.xml=Glass Development Kit, Google Inc.
+@name@http\://dl-ssl.google.com/android/repository/extras/intel/addon.xml=Intel HAXM
+@version@=1
+@disabled@https\://dl-ssl.google.com/glass/gdk/addon.xml=disabled
+@name@http\://dl.google.com/android/repository/sys-img/x86/addon-x86.xml=Google Inc. (x86 System Images)
+@disabled@http\://dl.google.com/android/repository/sys-img/android/sys-img.xml=disabled
+@name@https\://dl-ssl.google.com/android/repository/addon-6.xml=Google Inc.
+@name@http\://dl-ssl.google.com/android/repository/sys-img/android/sys-img.xml=Android System Images
+@disabled@https\://dl-ssl.google.com/android/repository/sys-img/x86/addon-x86.xml=disabled
+@disabled@https\://dl-ssl.google.com/android/repository/sys-img/android/sys-img.xml=disabled
+@name@https\://dl-ssl.google.com/glass/gdk/addon.xml=Glass Development Kit, Google Inc.
