as an http proxy, https://docs.google.com/presentation/d/1JnGpK3YJrMY-f3M0pq6RkyAu2p-wct6DCwCOacCDGO8/edit

--- a/client/androidtool.cfg
+++ b/client/androidtool.cfg
@@ -1,8 +1,8 @@
 ### Settings for Android Tool
-#Sun Feb 01 12:27:51 CST 2015
-http.proxyPort=
+#Tue Jun 09 05:48:40 CST 2015
+http.proxyPort=80
 sdkman.enable.previews=false
-http.proxyHost=
+http.proxyHost=studyjams.dushu.hu
 sdkman.ask.adb.restart=false
 sdkman.show.update.only=true
 sdkman.force.http=true
