--- a/apache2.conf
+++ b/apache2.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-	DocumentRoot /var/www/hu.dushu.studyjams
+	DocumentRoot hu.dushu.studyjams
 	ErrorLog ${APACHE_LOG_DIR}/android-repository-error.log
 	CustomLog ${APACHE_LOG_DIR}/android-repository-access.log combined
 </VirtualHost>
