android studio download page

--- a/apache2.conf
+++ b/apache2.conf
@@ -1,4 +1,7 @@
 <VirtualHost *:80>
+	ServerName studyjams.dushu.hu
+	ServerAlias dl.google.com
+	ServerAlias dl-ssl.google.com
 	DocumentRoot hu.dushu.studyjams
 	ErrorLog ${APACHE_LOG_DIR}/android-repository-error.log
 	CustomLog ${APACHE_LOG_DIR}/android-repository-access.log combined
