web manager setup

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Android Repository",
+  "name": "android-repository",
   "homepage": "https://github.com/renfeng/android-repository",
   "authors": [
     "Frank R. <renfeng.cn@gmail.com>"
