--- a/bower.json
+++ b/bower.json
@@ -17,12 +17,15 @@
     "tests"
   ],
   "dependencies": {
+    "clipboard": "~1.5.9",
     "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
     "iron-icons": "PolymerElements/iron-icons#~1.1.3",
     "paper-checkbox": "PolymerElements/paper-checkbox#~1.4.0",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.10",
+    "paper-fab": "PolymerElements/paper-fab#^1.2.0",
     "paper-header-panel": "PolymerElements/paper-header-panel#~1.1.6",
     "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.2",
+    "paper-input": "PolymerElements/paper-input#^1.1.19",
     "paper-item": "PolymerElements/paper-item#~1.2.1",
     "paper-menu": "PolymerElements/paper-menu#~1.2.2",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.1.6",
