--- a/apache2.conf
+++ b/apache2.conf
@@ -3,6 +3,6 @@
 	ServerAlias dl.google.com
 	ServerAlias dl-ssl.google.com
 	DocumentRoot hu.dushu.studyjams
-	ErrorLog ${APACHE_LOG_DIR}/android-repository-error.log
-	CustomLog ${APACHE_LOG_DIR}/android-repository-access.log combined
+	ErrorLog android-repository-error.log
+	CustomLog android-repository-access.log combined
 </VirtualHost>
