--- a/bower.json
+++ b/bower.json
@@ -17,20 +17,21 @@
     "tests"
   ],
   "dependencies": {
+    "app-layout": "PolymerElements/app-layout#^2.0.1",
+    "iron-collapse": "PolymerElements/iron-collapse#^2.0.0",
+    "iron-flex-layout": "PolymerElements/iron-flex-layout#^2.0.0",
+    "iron-icons": "PolymerElements/iron-icons#^2.0.0",
+    "paper-button": "PolymerElements/paper-button#^2.0.0",
+    "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.0",
+    "paper-fab": "PolymerElements/paper-fab#^2.0.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^2.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^2.0.0",
+    "paper-input": "PolymerElements/paper-input#^2.0.0",
+    "paper-item": "PolymerElements/paper-item#^2.0.0",
+    "paper-listbox": "PolymerElements/paper-listbox#^2.0.0",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^2.0.0",
+    "polymer": "Polymer/polymer#~2.0.0",
     "clipboard": "~1.5.9",
-    "iron-flex-layout": "PolymerElements/iron-flex-layout#^1.3.1",
-    "iron-icons": "PolymerElements/iron-icons#~1.1.3",
-    "paper-checkbox": "PolymerElements/paper-checkbox#~1.4.0",
-    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#~1.0.10",
-    "paper-fab": "PolymerElements/paper-fab#^1.2.0",
-    "paper-header-panel": "PolymerElements/paper-header-panel#~1.1.6",
-    "paper-icon-button": "PolymerElements/paper-icon-button#~1.1.2",
-    "paper-input": "PolymerElements/paper-input#^1.1.19",
-    "paper-item": "PolymerElements/paper-item#~1.2.1",
-    "paper-menu": "PolymerElements/paper-menu#~1.2.2",
-    "paper-toolbar": "PolymerElements/paper-toolbar#~1.1.6",
-    "poly-compatibility": "*",
-    "polymer": "Polymer/polymer#~1.6.1",
-    "polymer-detect-js": "^1.0.2"
+    "papaparse": "^4.3.3"
   }
 }
