directory subsitution for nginx config file

--- a/apache2.conf
+++ b/apache2.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
 	ServerName localhost
 	ServerAlias dl.google.com
-	DocumentRoot ROOT
+	DocumentRoot ${dir}
 	ErrorLog /var/log/apache2/android-repository-error.log
 	CustomLog /var/log/apache2/android-repository-access.log combined
 </VirtualHost>
