--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,7 @@
 server {
-
-    server_name studyjams.dushu.hu dl.google.com dl-ssl.google.com;
-    
+    server_name dl.google.com dl-ssl.google.com;
     location / {
-       root /home/www-data/android-repository;
+       root ${dir};
        autoindex off;
-	
     }
-
 }
